# localstack-pro-samples

./: .gitignore  .travis.yml  Makefile  README.md  assert  make-for-each.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
apigw-custom-domain/: .gitignore  Makefile  README.md  handler.js  package-lock.json  package.json  run.sh  serverless.yml
appsync-graphql-api/: Makefile  README.md  package-lock.json  package.json  requirements.txt  run.sh  schema.graphql  serverless.yml  websocket_client.py
athena-s3-queries/: Makefile  README.md  run.sh
aws-sam-amplify-lambda-webapp/: README.md
azure-functions/: Makefile  README.md  local.settings.json
cdk-resources/: README.md  cdk.json  package-lock.json  package.json
chalice-rest-api/: README.md  app.py  requirements-dev.txt
cloudfront-distributions/: Makefile  README.md  distconfig.json  handler.js  package-lock.json  package.json  serverless.yml
cloudwatch-metrics-aws/: README.md  failing-lambda.py  run.sh
codecommit-git-repo/: Makefile  README.md
cognito-jwt/: Makefile  README.md  build.gradle  test.sh
dynamodb-kinesis-stream/: Makefile  README.md  ddb-data.sh  main.tf  requirements.txt  test_stream_consumer.py
ec2-custom-ami/: Makefile  (+6 more)
emr-serverless-python-dependencies/: .gitignore  Dockerfile-aws  Dockerfile-localstack  Makefile  README.md  docker-compose.yml  emr-sample-access-policy.json.tfpl  emr-serverless-trust-policy.json  entrypoint.py  main.tf  pyproject.toml  start_job.sh  stop-application.sh
emr-serverless-python-dependencies/jobs/: spark_run.py
(+429 files in other folders)
